# diploma

./: README.md  app.py  config.yml  config_real_time.yml  config_video_areas.yml  display.py  main.py  model.py  production_traffic_manager_app.py  pyproject.toml  real_time_video_capture.py  requirements.txt  simulation.py  traffic_analyzer.py  traffic_light.py  traffic_manager.py  traffic_stats_utils.py  traffic_utils.py  trafic_light.py  video_capture.py  video_utils.py
frame_for_select_detected_zone/: README.md  save_frst_frame.py
modules/: autobackend.py
video/: save_frst_frame.py
