[tool.poetry]
name = "diploma"
version = "0.1.0"
description = ""
authors = ["danylo.filipenko <danylo.filipenko@gr8.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
supervision = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
